[package]
name = "basic-state-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The core intefaces for the iced framework.
iced = { git = "https://github.com/iced-rs/iced", features = ["tokio"]}
# For time
chrono = "0.4.26"

reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"